# info-plus

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  test.db
.github/workflows/: deploy.yml  lint.yml  test.yml
app/: Dockerfile  dev.Dockerfile  main.py
app/core/: __init__.py  db_manager.py
app/models/: __init__.py  base.py  category.py  employee.py  employee_category.py  employee_hire_type.py  feature.py  hire_type.py  news.py  user.py  user_category.py  users.py
app/routers/: add_user_favorit.py  employee.py  feature.py  message.py  news.py  user.py
app/utils/: __init__.py  db_manager.py  init_default_data.py  init_elasticsearch_index.py  init_es_index.py  insert_employee_data.py  news_client.py  news_provider_mapping.yaml  response_builder.py  text_utils.py  verifier.py
feature/: add_user_favorit.py
tests/unit/routers/: test_add_employee_data.py  test_add_user_favorit.py  test_custom-employee-information_recommendation.py  test_employee_DB_search.py  test_employee_recommendation.py  test_get_categories_by_feature.py  test_get_my_category_list.py  test_get_news_recommendations.py  test_kakao_router.py  test_news_DB_search.py  test_news_client.py  test_user_delete_favorite.py  tset_custom-employee-information_recommendation.py
tests/unit/routers/test_data/: router_cases.json
tests/unit/utils/response_builder/: test_response_builder.py
tests/unit/utils/response_builder/test_data/: response_builder_cases.json
tests/unit/utils/text_utils/: test_text_utils.py
(+1 files in other folders)
